src/css/project-details.css
/* styles.css */
*,
*::before,
*::after {
	box-sizing: inherit;
}

body, html {
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.container {
	padding: 0;
	margin: 4em auto; /* Center the container vertically */
	width: 70%; /* Set the width of the container */
	max-width: 900px; /* Limit the maximum width */
	display: flex;
	flex-wrap: wrap; /* Allow squares to wrap to the next line */
	gap: 0.7em; /* Space between grid items */
	justify-content: center; /* Center the items horizontally */
	align-items: center; /* Center the items vertically */
}

.header {
    position: relative; /* Ensures the header is the positioning context */
    width: 100%; /* Full width */
    height: auto; /* Auto height based on content */
}

.image-overlay-container {
    position: relative;
    display: block;
    width: 100%;
}

.img-overlay {
    width: 100%; /* Ensures the image covers the container */
    display: block; /* Removes bottom space/gap */
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.1); /* Semi-transparent black overlay */
    z-index: 1; /* Ensure it is above the image but below the text */
}

.overlay-text {
    position: absolute;
    bottom: 2em; /* Position from the bottom */
    left: 2em; /* Position from the left */
    color: white; /* Text color */
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Black shadow for legibility */
    z-index: 2; /* Ensures text is above the overlay */
    margin: 0; /* Removes default margins */
    padding: 0; /* No padding around the text */
}

.overlay-button {
    position: absolute;
    top: 1em; /* Position from the top */
    right: 1em; /* Position from the right */
    padding: 0.25em; /* Padding inside the button */
    width: 5em; /* Width of the button/icon */
    height: 5em; /* Height of the button/icon */
    background-color: white; /* Background color of the button */
    border: none; /* No border */
    z-index: 2; /* Ensures button is above the overlay */
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Subtle shadow for better visibility */
}

.transparent-button{
    background-color: transparent;
    box-shadow: none;
}

.back-home-button {
    top: 1em; /* Position from the top */
}

.language-button {
    top: auto;
    bottom: 1em; /* Position from the top */
    width: 3em; /* Width of the button/icon */
    height: 3em; /* Height of the button/icon */
}

.language-option {
    padding: 10px;
    cursor: pointer;
  }
  
  .language-option:hover {
    background-color: #f0f0f0;
  }

.language-dropdown {
    position: absolute;
    background-color: #fff;
    border: 1px solid #ccc;
    width: 100%;
    z-index: 1000;
    display: none;
  }

.text-section {
    background-color: #f0f0f0;
    padding: 2em;
}

.table-and-map-container {
    display: flex;
    width: 100%;
    align-items: flex-start; /* Align items at the start of the container */
    gap: 1em; /* Add space between the table and the map */
}

.table-container {
    width: 50%; /* Table takes half the width */
    min-height: 250px; /* As previously defined */
    overflow-y: auto; /* Adds scrollbar when necessary */
    border: 3px solid #ccc; /* Separates table from map */
}

.table-container, #osm-map {
    flex: 1; 
}

.table-container table {
    width: 100%; /* Full width of the entries div */
    border-collapse: collapse;
}

.table-container td {
    padding: 8px;
    border: 1px solid #ccc; /* Add borders to cells */
}

.phase-image {
    flex: 1; /* Keep your existing configuration */
    display: flex;
    justify-content: center;
    overflow: hidden;
    position: relative; /* Ensures proper stacking */
    min-height: 250px; /* Adjust based on your image's typical height or keep it responsive */
}

.video{
    width: 100%;
    min-height: 45vh;
}

.image-gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between; /* Ensures that elements are spaced out evenly */
    gap: 10px; /* Sets gap between rows and columns */
    width: 100%; /* Full width of the container */
}

.image-gallery a {
    width: calc(33.33% - 10px); /* Adjust width considering 10px gap */
    display: block; /* Treats the link as a block, enabling width and height settings */
    text-decoration: none; /* Removes underline from links */
}

.image-gallery img {
    width: 100%; /* Ensures the image fills the anchor tag */
    display: block; /* Removes bottom space/gap below the images */
    height: auto; /* Maintains aspect ratio */
}

.footer {
    margin-top: 2em;
    width: 100%;
}

.footer .navigation {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    border-top: 3em;
}

.footer .navigation img {
    width: 80px;
    height: auto;
    padding: 1em;
    border: 2px solid black;
}

@media (max-width: 768px) {
    .container {
        width: 95%;
        margin: 2em auto;
    }

    .overlay-text {
        bottom: 0.5em; /* Position from the bottom */
        left: 0.5em; /* Position from the left */
    }

    .back-home-button {
        width: 4em; /* Width of the button/icon */
        height: 4em; /* Height of the button/icon */
    }

    .video{
        min-height: 35vh;
    }

    .image-gallery a {
        width: calc(50% - 5px); /* Adjust width considering 10px gap */
    }

    .text-section {
        padding: 1.125em;
    }
}

